--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
         <h1>Apresentando a Getting Books</h1>
         <div>
-            <img src="../Projeto Integrador-Getting_Books/imgs/reading.jpg" alt="">
+            <img src="../Projeto Integrador-Getting_Books/imgs/reading.jpg" alt="" width="450px">
             <p>Fundada em 2024, através do curso de programador web da instituição de ensino SENAC, a Getting Books
                 busca
                 aumentar a facilidade das pessoas em conseguir aquele tão sonhado livro e se maravilhar com as
@@ -23,19 +23,19 @@
             <h2>MISSÃO, VISÃO E VALORES</h2>
         </div>
         <div>
-            <img src="../Projeto Integrador-Getting_Books/imgs/missao.png" alt="">
+            <img src="../Projeto Integrador-Getting_Books/imgs/missao.png" alt="" width="70px">
             <p>Promover o compartilhamento sustentável e acessível de conhecimento e cultura por meio de troca de
                 livros,
                 conectando pessoas que desejam renovar suas bibliotecas pessoais, incentivando a leitura e reduzindo o
                 desperdício.</p>
         </div>
         <div>
-            <img src="../Projeto Integrador-Getting_Books/imgs/visao.png" alt="">
+            <img src="../Projeto Integrador-Getting_Books/imgs/visao.png" alt="" width="70px">
             <p>Ser a principal plataforma de troca de livros, reconhecida por sua comunidade engajada, diversidade de
                 títulos e impacto positivo na democratização do acesso à leitura e no meio ambiente.</p>
         </div>
         <div>
-            <img src="../Projeto Integrador-Getting_Books/imgs/valor.png" alt="">
+            <img src="../Projeto Integrador-Getting_Books/imgs/valor.png" alt="" width="70px">
             <p><b>1.Sustentabilidade:</b> Incentivamos a reutilização de livros para reduzir o desperdício e promover
                 práticas ambientalmente responsáveis.</p>
             <p><b>2.Acessibilidade:</b> Buscamos tornar a leitura acessível para todos, facilitando o acesso a uma
