--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
     <link rel="stylesheet" href="../Projeto Integrador-Getting_Books/css/style.css">
 </head>
 
+<header>
+    <a href="" class="icon-link">
+        <img src="../imgs/Logo_LudoFashion.png" alt="" title="Home" width="100px">
+    </a>
+
+    <form action="" id="form-buscar">
+        <input type="searh" name="Buscar" id="buscar" placeholder="O que você procura?">
+        <button type="submit" id="btn-buscar"><img src="../imgs/icon_search.png" alt="" width="30px"></button>
+    </form>
+
+    <a href="" class="icon-link">
+        <img src="../imgs/icon_personB.png" alt="" width="40px">
+        Cadastre-se
+    </a>
+
+    <a href="" class="icon-link">
+        <img src="../imgs/icon_helpB.png" alt="" width="40px">
+        Dúvidas
+    </a>
+</header>
+
+<nav>
+
+    <a href="">Catálogo</a>
+
+    <a href="">Sobre a Loja</a>
+
+</nav>
+
 <body>
     <div>
         <h1>Apresentando a Getting Books</h1>
