--- a/index.html
+++ b/index.html
@@ -4,83 +4,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title>Sobre - Getting Books</title>
-    <link rel="stylesheet" href="../Projeto Integrador-Getting_Books/css/style.css">
+    <link rel="stylesheet" href="../Projeto-Integrador-Getting_Books/css/style.css">
 </head>
 
-<header>
+<nav class="nav1">
+    <a href="">Sobre a Getting Books</a>
+    <p class="ponto">•</p>
+    <a href="">Central de Ajuda</a>
+</nav>
+
+<header class="cabecalho">
     <a href="" class="icon-link">
-        <img src="../imgs/Logo_LudoFashion.png" alt="" title="Home" width="100px">
+        <img src="../Projeto-Integrador-Getting_Books/imgs/Logo_GettingBooks.png" alt="" title="Home" width="150px">
     </a>
 
-    <form action="" id="form-buscar">
-        <input type="searh" name="Buscar" id="buscar" placeholder="O que você procura?">
-        <button type="submit" id="btn-buscar"><img src="../imgs/icon_search.png" alt="" width="30px"></button>
-    </form>
+
+    <div class="search-box">
+        <input class="search-txt" type="text" name="buscar" placeholder="O que você está procurando?">
+        <a class="search-btn" href="#"></a>
+        <i class="fas fa-search"></i>
+    </div>
+
 
     <a href="" class="icon-link">
-        <img src="../imgs/icon_personB.png" alt="" width="40px">
-        Cadastre-se
+        <img src="../Projeto-Integrador-Getting_Books/imgs/coracao_icon.png" alt="" width="30px">
+        Minha lista
     </a>
 
     <a href="" class="icon-link">
-        <img src="../imgs/icon_helpB.png" alt="" width="40px">
-        Dúvidas
+        <img src="../Projeto-Integrador-Getting_Books/imgs/icon_troca.png" alt="" width="30px">
+        Trocas
+    </a>
+
+    <a href="" class="icon-link">
+        <img src="../Projeto-Integrador-Getting_Books/imgs/user_icon.png" alt="" width="30px">
+        Usuário
     </a>
 </header>
 
-<nav>
+<nav class="nav2">
 
-    <a href="">Catálogo</a>
+    <a href=""><img src="../Projeto-Integrador-Getting_Books/imgs/icon_categoria.png" alt="" width="25px">
+        Categorias</a>
 
-    <a href="">Sobre a Loja</a>
+    <p class="barra">|</p>
+
+    <a href="">Mais Procurados</a>
+
+    <p class="ponto">•</p>
+
+    <a href="">Principais Autores</a>
+
+    <p class="ponto">•</p>
+
+    <a href="">Livros Estrangeiros</a>
 
 </nav>
 
 <body>
     <div>
-        <h1>Apresentando a Getting Books</h1>
-        <div>
-            <img src="../Projeto Integrador-Getting_Books/imgs/reading.jpg" alt="" width="450px">
-            <p>Fundada em 2024, através do curso de programador web da instituição de ensino SENAC, a Getting Books
-                busca
-                aumentar a facilidade das pessoas em conseguir aquele tão sonhado livro e se maravilhar com as
-                histórias.</p>
-            <p>Aqui será apresentado todo o processo até a idéia .</p>
+        <div class="apresentacao">
+            <h1 class="titulo1">Apresentando a</h1>
+            <h1 class="titulo2">Getting Books</h1>
         </div>
-        <div>
-            <h2>MISSÃO, VISÃO E VALORES</h2>
+        <div class="imagem">
+            <img src="../Projeto-Integrador-Getting_Books/imgs/reading.jpg" alt="" width="350px" height="250px">
+            <p class="texto1">Fundada em 2024, através do curso de programador web da instituição de ensino SENAC, a
+                <b>Getting Books</b>
+                busca aumentar a facilidade das pessoas em conseguir aquele tão sonhado livro e se maravilhar com as
+                histórias.<br><br> Aqui será apresentado todo o processo até a idéia.</p>
         </div>
-        <div>
-            <img src="../Projeto Integrador-Getting_Books/imgs/missao.png" alt="" width="70px">
+        <div class="texto2">
+
+            <h2 class="tittulo3">MISSÃO, VISÃO E VALORES</h2>
+            <img src="../Projeto-Integrador-Getting_Books/imgs/missao.png" alt="" width="70px">
+
+            <h3>MISSÃO</h3>
             <p>Promover o compartilhamento sustentável e acessível de conhecimento e cultura por meio de troca de
-                livros,
-                conectando pessoas que desejam renovar suas bibliotecas pessoais, incentivando a leitura e reduzindo o
-                desperdício.</p>
-        </div>
-        <div>
-            <img src="../Projeto Integrador-Getting_Books/imgs/visao.png" alt="" width="70px">
-            <p>Ser a principal plataforma de troca de livros, reconhecida por sua comunidade engajada, diversidade de
+                livros, conectando pessoas que desejam renovar suas bibliotecas pessoais, incentivando a leitura e
+                reduzindo o desperdício.</p>
+
+            <img src="../Projeto-Integrador-Getting_Books/imgs/visao.png" alt="" width="70px">
+
+            <h3>VISÃO</h3>
+            <p>Ser a principal plataforma de troca de livros, reconhecida por sua comunidade engajada, diversidade
+                de
                 títulos e impacto positivo na democratização do acesso à leitura e no meio ambiente.</p>
-        </div>
-        <div>
-            <img src="../Projeto Integrador-Getting_Books/imgs/valor.png" alt="" width="70px">
+
+            <img src="../Projeto-Integrador-Getting_Books/imgs/valor.png" alt="" width="70px">
+
+            <h3>VALORES</h3>
             <p><b>1.Sustentabilidade:</b> Incentivamos a reutilização de livros para reduzir o desperdício e promover
                 práticas ambientalmente responsáveis.</p>
             <p><b>2.Acessibilidade:</b> Buscamos tornar a leitura acessível para todos, facilitando o acesso a uma
-                variedade
-                de livros sem custo.</p>
+                variedade de livros sem custo.</p>
             <p><b>3.Comunidade:</b> Valorizamos a construção de uma comunidade ativa e colaborativa onde os usuários
                 compartilham conhecimento e experiências.</p>
             <p><b>4.Transparência:</b> Mantemos uma ocmuniação clara e honesta com nossos usuários, garantindo confiança
-                e
-                segurança nas trocas.</p>
+                e segurança nas trocas.</p>
             <p><b>5.Inovação:</b> Estamos comprometidos com a melhoria contínua de nossa plataforma, incorporando
-                feedback
-                dos usuários e adotando novas tecnologias.</p>
+                feedback dos usuários e adotando novas tecnologias.</p>
             <p><b>6.Educação:</b> Promovemos a educação e o desenvolvimento pessoal por meio da leitura, incentivando o
                 aprendizado contínuo.</p>
         </div>
+    </div>
     </div>
 </body>
 
