--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title>Sobre - Getting Books</title>
-    <link rel="stylesheet" href="../Projeto-Integrador-Getting_Books/css/style.css">
+    <link rel="stylesheet" href="../Projeto Integrador-Getting_Books/css/style.css">
 </head>
 
 <nav class="nav1">
@@ -17,7 +17,7 @@
 
 <header class="cabecalho">
     <a href="" class="icon-link">
-        <img src="../Projeto-Integrador-Getting_Books/imgs/Logo_GettingBooks.png" alt="" title="Home" width="150px">
+        <img src="../Projeto Integrador-Getting_Books/imgs/Logo_GettingBooks.png" alt="" title="Home" width="150px">
     </a>
 
 
@@ -29,24 +29,24 @@
 
 
     <a href="" class="icon-link">
-        <img src="../Projeto-Integrador-Getting_Books/imgs/coracao_icon.png" alt="" width="30px">
+        <img src="../Projeto Integrador-Getting_Books/imgs/coracao_icon.png" alt="" width="30px">
         Minha lista
     </a>
 
     <a href="" class="icon-link">
-        <img src="../Projeto-Integrador-Getting_Books/imgs/icon_troca.png" alt="" width="30px">
+        <img src="../Projeto Integrador-Getting_Books/imgs/icon_troca.png" alt="" width="30px">
         Trocas
     </a>
 
     <a href="" class="icon-link">
-        <img src="../Projeto-Integrador-Getting_Books/imgs/user_icon.png" alt="" width="30px">
+        <img src="../Projeto Integrador-Getting_Books/imgs/user_icon.png" alt="" width="30px">
         Usuário
     </a>
 </header>
 
 <nav class="nav2">
 
-    <a href=""><img src="../Projeto-Integrador-Getting_Books/imgs/icon_categoria.png" alt="" width="25px">
+    <a href=""><img src="../Projeto Integrador-Getting_Books/imgs/icon_categoria.png" alt="" width="25px">
         Categorias</a>
 
     <p class="barra">|</p>
@@ -70,7 +70,7 @@
             <h1 class="titulo2">Getting Books</h1>
         </div>
         <div class="imagem">
-            <img src="../Projeto-Integrador-Getting_Books/imgs/reading.jpg" alt="" width="350px" height="250px">
+            <img src="../Projeto Integrador-Getting_Books/imgs/reading.jpg" alt="" width="350px" height="250px">
             <p class="texto1">Fundada em 2024, através do curso de programador web da instituição de ensino SENAC, a
                 <b>Getting Books</b>
                 busca aumentar a facilidade das pessoas em conseguir aquele tão sonhado livro e se maravilhar com as
@@ -79,21 +79,21 @@
         <div class="texto2">
 
             <h2 class="tittulo3">MISSÃO, VISÃO E VALORES</h2>
-            <img src="../Projeto-Integrador-Getting_Books/imgs/missao.png" alt="" width="70px">
+            <img src="../Projeto Integrador-Getting_Books/imgs/visao.png" alt="" width="70px">
 
             <h3>MISSÃO</h3>
             <p>Promover o compartilhamento sustentável e acessível de conhecimento e cultura por meio de troca de
                 livros, conectando pessoas que desejam renovar suas bibliotecas pessoais, incentivando a leitura e
                 reduzindo o desperdício.</p>
 
-            <img src="../Projeto-Integrador-Getting_Books/imgs/visao.png" alt="" width="70px">
+            <img src="../Projeto Integrador-Getting_Books/imgs/missao.png" alt="" width="70px">
 
             <h3>VISÃO</h3>
             <p>Ser a principal plataforma de troca de livros, reconhecida por sua comunidade engajada, diversidade
                 de
                 títulos e impacto positivo na democratização do acesso à leitura e no meio ambiente.</p>
 
-            <img src="../Projeto-Integrador-Getting_Books/imgs/valor.png" alt="" width="70px">
+            <img src="../Projeto Integrador-Getting_Books/imgs/valor.png" alt="" width="70px">
 
             <h3>VALORES</h3>
             <p><b>1.Sustentabilidade:</b> Incentivamos a reutilização de livros para reduzir o desperdício e promover
