--- a/index.html
+++ b/index.html
@@ -27,26 +27,28 @@
         <i class="fas fa-search"></i>
     </div>
 
+    <div class="icones">
+        <a href="" class="icon-link">
+            <img src="../Projeto Integrador-Getting_Books/imgs/coracao_icon.png" alt="" width="30px">
+            Minha lista
+        </a>
 
-    <a href="" class="icon-link">
-        <img src="../Projeto Integrador-Getting_Books/imgs/coracao_icon.png" alt="" width="30px">
-        Minha lista
-    </a>
+        <a href="" class="icon-link">
+            <img src="../Projeto Integrador-Getting_Books/imgs/icon_troca.png" alt="" width="30px">
+            Trocas
+        </a>
 
-    <a href="" class="icon-link">
-        <img src="../Projeto Integrador-Getting_Books/imgs/icon_troca.png" alt="" width="30px">
-        Trocas
-    </a>
-
-    <a href="" class="icon-link">
-        <img src="../Projeto Integrador-Getting_Books/imgs/user_icon.png" alt="" width="30px">
-        Usuário
-    </a>
+        <a href="" class="icon-link">
+            <img src="../Projeto Integrador-Getting_Books/imgs/user_icon.png" alt="" width="30px">
+            Usuário
+        </a>
+    </div>
 </header>
 
 <nav class="nav2">
 
-    <a href=""><img src="../Projeto Integrador-Getting_Books/imgs/icon_categoria.png" alt="" width="25px">
+    <a href="" class="categoria"><img src="../Projeto Integrador-Getting_Books/imgs/icon_categoria.png" alt=""
+            width="25px">
         Categorias</a>
 
     <p class="barra">|</p>
@@ -74,7 +76,8 @@
             <p class="texto1">Fundada em 2024, através do curso de programador web da instituição de ensino SENAC, a
                 <b>Getting Books</b>
                 busca aumentar a facilidade das pessoas em conseguir aquele tão sonhado livro e se maravilhar com as
-                histórias.<br><br> Aqui será apresentado todo o processo até a idéia.</p>
+                histórias.<br><br> Aqui será apresentado todo o processo até a idéia.
+            </p>
         </div>
         <div class="texto2">
 
@@ -111,6 +114,30 @@
         </div>
     </div>
     </div>
+    <footer>
+        <div>
+            <h4></h4>
+            <a href=""></a>
+        </div>
+        <div>
+            <h4></h4>
+            <a href=""></a>
+            <a href=""></a>
+        </div>
+        <div>
+            <h4></h4>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+        </div>
+        <div>
+            <h4></h4>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a><a href=""></a><a href=""></a>
+        </div>
+    </footer>
 </body>
 
 </html>
