--- a/index.html
+++ b/index.html
@@ -82,63 +82,86 @@
         <div class="texto2">
 
             <h2 class="tittulo3">MISSÃO, VISÃO E VALORES</h2>
-            <img src="../Projeto-Integrador-Getting_Books/imgs/missao.png" alt="" width="70px">
 
-            <h3>MISSÃO</h3>
-            <p>Promover o compartilhamento sustentável e acessível de conhecimento e cultura por meio de troca de
-                livros, conectando pessoas que desejam renovar suas bibliotecas pessoais, incentivando a leitura e
-                reduzindo o desperdício.</p>
+            <div class="divisao">
+                <div class="missao">
+                    <h3>MISSÃO</h3>
+                    <img src="../Projeto-Integrador-Getting_Books/imgs/missao.png" alt="" width="70px">
+                    <p>Promover o compartilhamento sustentável e acessível de conhecimento e cultura por meio de troca
+                        de
+                        livros, conectando pessoas que desejam renovar suas bibliotecas pessoais, incentivando a leitura
+                        e
+                        reduzindo o desperdício.</p>
 
-            <img src="../Projeto-Integrador-Getting_Books/imgs/visao.png" alt="" width="70px">
-
-            <h3>VISÃO</h3>
-            <p>Ser a principal plataforma de troca de livros, reconhecida por sua comunidade engajada, diversidade
-                de
-                títulos e impacto positivo na democratização do acesso à leitura e no meio ambiente.</p>
+                </div>
+                <div class="visao">
+                    <h3>VISÃO</h3>
+                    <img src="../Projeto-Integrador-Getting_Books/imgs/visao.png" alt="" width="70px">
+                    <p>Ser a principal plataforma de troca de livros, reconhecida por sua comunidade engajada,
+                        diversidade
+                        de
+                        títulos e impacto positivo na democratização do acesso à leitura e no meio ambiente.</p>
+                </div>
+            </div>
 
             <img src="../Projeto-Integrador-Getting_Books/imgs/valor.png" alt="" width="70px">
-
             <h3>VALORES</h3>
-            <p><b>1.Sustentabilidade:</b> Incentivamos a reutilização de livros para reduzir o desperdício e promover
-                práticas ambientalmente responsáveis.</p>
-            <p><b>2.Acessibilidade:</b> Buscamos tornar a leitura acessível para todos, facilitando o acesso a uma
-                variedade de livros sem custo.</p>
-            <p><b>3.Comunidade:</b> Valorizamos a construção de uma comunidade ativa e colaborativa onde os usuários
-                compartilham conhecimento e experiências.</p>
-            <p><b>4.Transparência:</b> Mantemos uma comunicação clara e honesta com nossos usuários, garantindo
-                confiança
-                e segurança nas trocas.</p>
-            <p><b>5.Inovação:</b> Estamos comprometidos com a melhoria contínua de nossa plataforma, incorporando
-                feedback dos usuários e adotando novas tecnologias.</p>
-            <p><b>6.Educação:</b> Promovemos a educação e o desenvolvimento pessoal por meio da leitura, incentivando o
-                aprendizado contínuo.</p>
+            <details class="pergunta">
+                <summary><b>1.Sustentabilidade:</b></summary>
+                <p>Incentivamos a reutilização de livros para reduzir o desperdício e promover
+                    práticas ambientalmente responsáveis.</p>
+            </details>
+            <details class="pergunta">
+                <summary><b>2.Acessibilidade:</b></summary>
+                <p>Buscamos tornar a leitura acessível para todos, facilitando o acesso a uma
+                    variedade de livros sem custo.</p>
+            </details>
+            <details class="pergunta">
+                <summary><b>3.Comunidade:</b></summary>
+                <p>Valorizamos a construção de uma comunidade ativa e colaborativa onde os usuários
+                    compartilham conhecimento e experiências.</p>
+            </details>
+            <details class="pergunta">
+                <summary><b>4.Transparência:</b></summary>
+                <p>Mantemos uma comunicação clara e honesta com nossos usuários, garantindo
+                    confiança e segurança nas trocas.</p>
+            </details>
+            <details class="pergunta">
+                <summary><b>5.Inovação:</b></summary>
+                <p>Estamos comprometidos com a melhoria contínua de nossa plataforma, incorporando
+                    feedback dos usuários e adotando novas tecnologias.</p>
+            </details>
+            <details class="pergunta">
+                <summary><b>6.Educação:</b></summary>
+                <p>Promovemos a educação e o desenvolvimento pessoal por meio da leitura, incentivando o
+                    aprendizado contínuo.</p>
+            </details>
         </div>
-    </div>
     </div>
     <footer>
         <div class="footer-container">
             <div class="footer-section about">
-                <h2>Institucional</h2>
+                <h2 class="rodape">Institucional</h2>
                 <ul>
                     <li><a href="#">Quem somos?</a></li>
                 </ul>
             </div>
             <div class="footer-section links">
-                <h2>Ajuda</h2>
+                <h2 class="rodape">Ajuda</h2>
                 <ul>
                     <li><a href="#">Central de ajuda</a></li>
                     <li><a href="#">Dúvidas</a></li>
                 </ul>
             </div>
             <div class="footer-section social">
-                <h2>Navegue pelo site</h2>
+                <h2 class="rodape">Navegue pelo site</h2>
                 <ul>
                     <li><a href="#">Livros mais procurados</a></li>
                     <li><a href="#">Principais autores</a></li>
                 </ul>
             </div>
             <div class="footer-section social">
-                <h2>Redes Sociais</h2>
+                <h2 class="rodape">Redes Sociais</h2>
                 <ul class="icon-social">
                     <li><a href="#"><img src="../Projeto-Integrador-Getting_Books/imgs/instagram_icon.png" alt=""
                                 width="20px" title="Instagram"></a></li>
@@ -157,7 +180,7 @@
         </div>
 
         <div class="footer-bottom">
-            <h2>Uma empresa produzida pelo <img src="../Projeto-Integrador-Getting_Books/imgs/senac_logo.png" alt=""
+            <h2 class="rodape">Uma empresa produzida pelo <img src="../Projeto-Integrador-Getting_Books/imgs/senac_logo.png" alt=""
                     width="50px"></h2><br><br>
             &copy; 2024 Getting Books | Todos os direitos reservados <br> R. do Passeio, 495 - Centro, São Luís -
             Ma, 65015-350
