--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <title>Sobre - Getting Books</title>
-    <link rel="stylesheet" href="../Projeto Integrador-Getting_Books/css/style.css">
+    <link rel="stylesheet" href="../Projeto-Integrador-Getting_Books/css/style.css">
 </head>
 
 <nav class="nav1">
