--- a/index.html
+++ b/index.html
@@ -87,55 +87,56 @@
                 <div class="missao">
                     <h3>MISSÃO</h3>
                     <img src="../Projeto-Integrador-Getting_Books/imgs/missao.png" alt="" width="70px">
-                    <p>Promover o compartilhamento sustentável e acessível de conhecimento e cultura por meio de troca
-                        de
-                        livros, conectando pessoas que desejam renovar suas bibliotecas pessoais, incentivando a leitura
+                    <p>Promover o compartilhamento sustentável e acessível de conhecimento e cultura por meio de troca de livros, conectando pessoas que desejam renovar suas bibliotecas pessoais, incentivando a leitura
                         e
                         reduzindo o desperdício.</p>
 
-            <img src="../Projeto-Integrador-Getting_Books/imgs/visao.png" alt="" width="70px">
+                    <img src="../Projeto-Integrador-Getting_Books/imgs/visao.png" alt="" width="70px">
 
-            <h3>VISÃO</h3>
-            <p>Ser a principal plataforma de troca de livros, reconhecida por sua comunidade engajada, diversidade
-                de
-                títulos e impacto positivo na democratização do acesso à leitura e no meio ambiente.</p>
+                    <h3>VISÃO</h3>
+                    <p>Ser a principal plataforma de troca de livros, reconhecida por sua comunidade engajada,
+                        diversidade
+                        de
+                        títulos e impacto positivo na democratização do acesso à leitura e no meio ambiente.</p>
 
-            <img src="../Projeto-Integrador-Getting_Books/imgs/valor.png" alt="" width="70px">
+                    <img src="../Projeto-Integrador-Getting_Books/imgs/valor.png" alt="" width="70px">
 
-            <h3>VALORES</h3>
-            <details class="pergunta">
-                <summary><b>1.Sustentabilidade:</b></summary>
-                <p>Incentivamos a reutilização de livros para reduzir o desperdício e promover
-                    práticas ambientalmente responsáveis.</p>
-            </details>
-            <details class="pergunta">
-                <summary><b>2.Acessibilidade:</b></summary>
-                <p>Buscamos tornar a leitura acessível para todos, facilitando o acesso a uma
-                    variedade de livros sem custo.</p>
-            </details>
-            <details class="pergunta">
-                <summary><b>3.Comunidade:</b></summary>
-                <p>Valorizamos a construção de uma comunidade ativa e colaborativa onde os usuários
-                    compartilham conhecimento e experiências.</p>
-            </details>
-            <details class="pergunta">
-                <summary><b>4.Transparência:</b></summary>
-                <p>Mantemos uma comunicação clara e honesta com nossos usuários, garantindo
-                    confiança e segurança nas trocas.</p>
-            </details>
-            <details class="pergunta">
-                <summary><b>5.Inovação:</b></summary>
-                <p>Estamos comprometidos com a melhoria contínua de nossa plataforma, incorporando
-                    feedback dos usuários e adotando novas tecnologias.</p>
-            </details>
-            <details class="pergunta">
-                <summary><b>6.Educação:</b></summary>
-                <p>Promovemos a educação e o desenvolvimento pessoal por meio da leitura, incentivando o
-                    aprendizado contínuo.</p>
-            </details>
+                    <h3>VALORES</h3>
+                    <details class="pergunta">
+                        <summary><b>1.Sustentabilidade:</b></summary>
+                        <p>Incentivamos a reutilização de livros para reduzir o desperdício e promover
+                            práticas ambientalmente responsáveis.</p>
+                    </details>
+                    <details class="pergunta">
+                        <summary><b>2.Acessibilidade:</b></summary>
+                        <p>Buscamos tornar a leitura acessível para todos, facilitando o acesso a uma
+                            variedade de livros sem custo.</p>
+                    </details>
+                    <details class="pergunta">
+                        <summary><b>3.Comunidade:</b></summary>
+                        <p>Valorizamos a construção de uma comunidade ativa e colaborativa onde os usuários
+                            compartilham conhecimento e experiências.</p>
+                    </details>
+                    <details class="pergunta">
+                        <summary><b>4.Transparência:</b></summary>
+                        <p>Mantemos uma comunicação clara e honesta com nossos usuários, garantindo
+                            confiança e segurança nas trocas.</p>
+                    </details>
+                    <details class="pergunta">
+                        <summary><b>5.Inovação:</b></summary>
+                        <p>Estamos comprometidos com a melhoria contínua de nossa plataforma, incorporando
+                            feedback dos usuários e adotando novas tecnologias.</p>
+                    </details>
+                    <details class="pergunta">
+                        <summary><b>6.Educação:</b></summary>
+                        <p>Promovemos a educação e o desenvolvimento pessoal por meio da leitura, incentivando o
+                            aprendizado contínuo.</p>
+                    </details>
+                </div>
+            </div>
         </div>
-    </div>
 </body>
+
 <footer>
     <div class="footer-container">
         <div class="footer-section about">
@@ -165,14 +166,14 @@
                             width="20px" title="Instagram"></a></li>
                 <li><a href="#"><img src="../Projeto Integrador-Getting_Books/imgs/facebook_icon.png" alt=""
                             width="20px" title="Facebook"></a></li>
-                <li><a href="#"><img src="../Projeto Integrador-Getting_Books/imgs/twitter_icon.png" alt=""
-                            width="20px" title="Twitter"></a></li>
+                <li><a href="#"><img src="../Projeto Integrador-Getting_Books/imgs/twitter_icon.png" alt="" width="20px"
+                            title="Twitter"></a></li>
                 <li><a href="#"><img src="../Projeto Integrador-Getting_Books/imgs/linkedin_icon.png" alt=""
                             width="20px" title="Linkedin"></a></li>
-                <li><a href="#"><img src="../Projeto Integrador-Getting_Books/imgs/youtube_icon.png" alt=""
-                            width="20px" title="YouTube"></a></li>
-                <li><a href="#"><img src="../Projeto Integrador-Getting_Books/imgs/tiktok_icon.png" alt=""
-                            width="20px" title="Tik Tok"></a></li>
+                <li><a href="#"><img src="../Projeto Integrador-Getting_Books/imgs/youtube_icon.png" alt="" width="20px"
+                            title="YouTube"></a></li>
+                <li><a href="#"><img src="../Projeto Integrador-Getting_Books/imgs/tiktok_icon.png" alt="" width="20px"
+                            title="Tik Tok"></a></li>
             </ul>
         </div>
     </div>
@@ -184,4 +185,5 @@
         Ma, 65015-350
     </div>
 </footer>
+
 </html>
