--- a/index.html
+++ b/index.html
@@ -87,21 +87,23 @@
                 <div class="missao">
                     <h3>MISSÃO</h3>
                     <img src="../Projeto-Integrador-Getting_Books/imgs/missao.png" alt="" width="70px">
-                    <p>Promover o compartilhamento sustentável e acessível de conhecimento e cultura por meio de troca de livros, conectando pessoas que desejam renovar suas bibliotecas pessoais, incentivando a leitura
+                    <p>Promover o compartilhamento sustentável e acessível de conhecimento e cultura por meio de troca
+                        de livros, conectando pessoas que desejam renovar suas bibliotecas pessoais, incentivando a
+                        leitura
                         e
                         reduzindo o desperdício.</p>
-
-                    <img src="../Projeto-Integrador-Getting_Books/imgs/visao.png" alt="" width="70px">
-
+                </div>
+                <div class="visao">
                     <h3>VISÃO</h3>
+                    <img src="../Projeto-Integrador-Getting_Books/imgs/visao.png" alt="" width="70px">
                     <p>Ser a principal plataforma de troca de livros, reconhecida por sua comunidade engajada,
                         diversidade
                         de
                         títulos e impacto positivo na democratização do acesso à leitura e no meio ambiente.</p>
-
-                    <img src="../Projeto-Integrador-Getting_Books/imgs/valor.png" alt="" width="70px">
-
+                </div>
+                <div class="valores">
                     <h3>VALORES</h3>
+                    <img src="../Projeto-Integrador-Getting_Books/imgs/valor.png" alt="" width="70px">
                     <details class="pergunta">
                         <summary><b>1.Sustentabilidade:</b></summary>
                         <p>Incentivamos a reutilização de livros para reduzir o desperdício e promover
@@ -135,6 +137,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </body>
 
 <footer>
