--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </div>
 
     <div class="footer-bottom">
-        <h2>Uma empresa produzida pelo <img src="../Projeto-Integrador-Getting_Books/imgs/senac_logo.png" alt=""
+        <h2 class="titulo-footer">Uma empresa produzida pelo <img src="../Projeto-Integrador-Getting_Books/imgs/senac_logo.png" alt=""
                 width="50px"></h2><br><br>
         &copy; 2024 Getting Books | Todos os direitos reservados <br> R. do Passeio, 495 - Centro, São Luís -
         Ma, 65015-350
