--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </a>
     
         <div class="search-box">
-            <input class="search-txt" type="text" name="buscar" placeholder="O que você está procurando?">
+            <input class="search-txt" type="search" name="buscar" placeholder="O que você está procurando?">
             <a class="search-btn" href="#"></a>
             <i class="fas fa-search"></i>
         </div>
