--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </details>
                 <details class="pergunta">
                     <summary><b>5. Inovação:</b></summary>
-                    <p>Estamos comprometidos com a melhoria contínua de nossa plataforma, incorporando feedback dos usuários e adotando novas tecnologias.</p>
+                    <p>Estamos comprometidos com a melhoria de nossa plataforma, incorporando feedback dos usuários e adotando novas tecnologias.</p>
                 </details>
                 <details class="pergunta">
                     <summary><b>6. Educação:</b></summary>
